# AGENTIC-AI

agentic-misra-do178c/: README.md  pyproject.toml  requirements.txt  run_demo.py
agentic-misra-do178c/agents/: auditor_agent.py  codegen_agent.py  repair_agent.py  report_agent.py  requirements_agent.py  retrieval_agent.py  shared_llm.py  verify_agent.py
agentic-misra-do178c/eval/: judge.py  tasks.py  tasks.yaml
agentic-misra-do178c/kb/misra/: bm25.pkl  faiss.index  texts.jsonl
agentic-misra-do178c/orchestrator/: graph.py  state.py
agentic-misra-do178c/parser/: misra_rules.jsonl  parse_do178c_notes.py  parse_misra_pdf.py
agentic-misra-do178c/policies/: constitution.yaml
agentic-misra-do178c/policies/prompts/: codegen.txt  critic.txt  judge.txt  planner.txt
agentic-misra-do178c/reports/: _debug_auditor_last.txt  _debug_codegen_last.txt  compliance_report.md
agentic-misra-do178c/samples/: code_baseline.c
agentic-misra-do178c/samples/tests/: test_vectors.json
agentic-misra-do178c/tools/: build_do178c_kb.py  build_misra_kb.py  compiler.py  coverage.py  export_md.py  lint_misra_light.py  patch.py  retrieval.py  unit_test.py
compliance-copilot-full/: README.md  requirements.txt
compliance-copilot-full/agent/: graph.py  schemas.py
compliance-copilot-full/api/: app.py
compliance-copilot-full/rag/: answer_chain.py  config.py  corpus.py  hybrid_retriever.py  index_builder.py
compliance-copilot-full/scripts/: ask.py  build_index.py  chunk_sweep.py  corpus_lint.py  web_snapshot.py
compliance-copilot-full/tests/: test_rag_smoke.py
(+4 files in other folders)
